# python-stubs

./: LICENSE  pyproject.toml
src/nibabel/: __init__.pyi
